[tool.poetry]
name = "python-flask-chat-app"
version = "0.1.0"
description = ""
authors = ["NathStevo97 <natstephenson15@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.3"
flask-socketio = "^5.5.1"
python-dotenv = "^1.2.1"
werkzeug = "3.1.6"
python-socketio = "5.14.0"


[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
flake8 = "^7.3.0"
pylint = "^4.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
